Fix dark mode comment color in CodeMirror
Closes gh-1084

--- a/relate/static/css/codemirror.scss
+++ b/relate/static/css/codemirror.scss
@@ -39,7 +39,7 @@
   @media (prefers-color-scheme: dark) {
 
     .cmt-atom      {color: #F78C6C;}
-    .cmt-comment   {color: #545454;}
+    .cmt-comment   {color: #A0A0A0;}
     .cmt-keyword   {color: #C792EA;}
     .cmt-literal   {color: #FFCB6B;}
     .cmt-number    {color: #FF5370;}
